Loading notebooks works. Changed filestructure

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
   <head>
-  	<script src="jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="sammy-latest.min.js"></script>
-  	<script src="main.js"></script>
+  	<script type="text/javascript" src="scripts/lib/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="scripts/lib/sammy-latest.min.js"></script>
+    <script type="text/javascript" src="scripts/lib/sammy.template.js"></script>
+  	<script type="text/javascript" src="scripts/main.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="templates/templates.css">
   	<title>powernote</title>
   </head>
   <body>
