--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="scripts/lib/sammy-latest.min.js"></script>
     <script type="text/javascript" src="scripts/lib/sammy.template.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script type="text/javascript" src="scripts/camera.js"></script>
   	<script type="text/javascript" src="scripts/lib/pen.js"></script>
 
 
