Drag and drop uploads

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   	<script type="text/javascript" src="scripts/lib/pen.js"></script>
     <script src="//rawgithub.com/ajaxorg/ace-builds/master/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="http://ink.github.io/codeblock.js/javascripts/codeblock.js" type="text/javascript" charset="utf-8"></script>
+    <script src="http://rawgit.com/enyo/dropzone/master/downloads/dropzone.js" type="text/javascript" charset="utf-8"></script>
 
 
     <link rel="stylesheet" type="text/css" href="scripts/lib/pen.css">
