Added Bing integration. No adding into doc yet

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         </div>
       </div>
         <div class="bing-modal">
-          <textarea class="bing-search"></textarea>
+          <input class="bing-search"/>
           <div class="bing-image"></div>
-          <div class="bing-image bing-image-end"></div>
+          <div class="bing-image"></div>
           <div class="bing-image"></div>
           <div class="bing-image"></div>
         </div>
