--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
   </head>
   <body>
     <div class="header">
-      <h1>powernote</h1>
+      
+      <div id="logo"><h1>powernote</h1></div>
       <div id="menu">
-      <button id="itable">Table</button>
-      <button id="icamera">Camera</button>
-      <button id="bing">Bing</button>
-      <button id="icode">Code</button>
-      <button id="ilatex">Latex</button>
+        <div id="ilatex" class="menuitem"><img src="https://google.github.io/material-design-icons/editor/svg/ic_format_textdirection_l_to_r_48px.svg"></div>
+        <div id="bing" class="menuitem"><img src="https://google.github.io/material-design-icons/editor/svg/ic_insert_photo_48px.svg"></div>
+        <div id="icamera" class="menuitem"><img src="https://google.github.io/material-design-icons/image/svg/ic_camera_alt_48px.svg"></div>
+        <div id="icode" class="menuitem"><img src="https://google.github.io/material-design-icons/action/svg/ic_polymer_48px.svg"></div>
+        <div id="itable" class="menuitem"><img src="https://google.github.io/material-design-icons/action/svg/ic_view_module_48px.svg"></div>
       </div>
+
+ 
     </div>
 
     <div class="main">
