--- a/design.html
+++ b/design.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
   <head>
 
@@ -29,7 +30,13 @@
   <div id="content">
     <div id="nav">
       <div id="logo"></div>
-      <div id="menu"></div>
+      <div id="menu">
+        <div id="ilatex" class="menuitem"><img src="https://google.github.io/material-design-icons/editor/svg/ic_format_textdirection_l_to_r_48px.svg"></div>
+        <div id="itable" class="menuitem"><img src="https://google.github.io/material-design-icons/editor/svg/ic_insert_photo_48px.svg"></div>
+        <div id="icamera" class="menuitem"><img src="https://google.github.io/material-design-icons/image/svg/ic_camera_alt_48px.svg"></div>
+        <div id="icode" class="menuitem"><img src="https://google.github.io/material-design-icons/action/svg/ic_polymer_48px.svg"></div>
+        <div id="itable" class="menuitem"><img src="https://google.github.io/material-design-icons/action/svg/ic_view_module_48px.svg"></div>
+      </div>
     </div>
 
     <div class="clearfix"></div>
