--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <div class="header">
       
-      <div id="logo"><h1>powernote</h1></div>
+      <div id="logo"><h1>Power Note</h1></div>
       <div id="menu">
         <div id="ilatex" class="menuitem"><img src="https://google.github.io/material-design-icons/editor/svg/ic_format_textdirection_l_to_r_48px.svg"></div>
         <div id="bing" class="menuitem"><img src="https://google.github.io/material-design-icons/editor/svg/ic_insert_photo_48px.svg"></div>
@@ -42,7 +42,7 @@
         <div class="nav">
         <div class="sections">
           <div class="section_header">
-            <p>Sections</p>
+            <p class="tit">Sections</p>
           </div>
         </div>
         <div class="pages">
@@ -94,11 +94,12 @@
       <p>Bake until the topping is deeply golden. This should take 35-40 minutes. Let cool slightly, but you'll want to serve this warm.</p></div></div></article>
         </div>
 
-
-<textarea id="demo-input" style="display:none" spellcheck="false">
+<div class="latex">
+<textarea id="demo-input" style=""  rows="5" cols="35" spellcheck="false">
 f(x) = \int_{-\infty}^\infty
     \hat f(\xi)\,e^{2 \pi i \xi x}
     \,d\xi</textarea>
-
+<center><button id="linsert">Insert</button></center>
+</div>
   </body>
 </html>
