--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <script src="http://rawgit.com/enyo/dropzone/master/downloads/dropzone.js" type="text/javascript" charset="utf-8"></script>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.1.1/katex.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.1.1/katex.min.js"></script>
+<script src="http://www.jqueryscript.net/demo/Medium-Style-jQuery-Html5-WYSIWYG-Inline-Editor-Penplate/js/min/penplate.min.js"></script>
 
 
     <link rel="stylesheet" type="text/css" href="scripts/lib/pen.css">
+    <link rel="stylesheet" type="text/css" href="http://www.jqueryscript.net/demo/Medium-Style-jQuery-Html5-WYSIWYG-Inline-Editor-Penplate/css/penplate.css">
 
     <link rel="stylesheet" type="text/css" href="http://ink.github.io/codeblock.js/stylesheets/codeblock.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="templates/templates.css">
