--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </div>
         <div class="bing-modal">
-          <input class="bing-search"/>
+          <textarea class="bing-search"></textarea>
         </div>
         <article contenteditable="true" tabindex="0" class="editor noselect" id="editor">
 
